# youtubei

./: .gitignore  Cargo.toml  README.md  build.rs
data/: countries.json
innertube/: browse.proto  context.proto  creator.proto  flag.proto  navigation.proto  next.proto
src/: hide_user.rs  lib.rs  models.rs  resolve_url.rs  tests.rs  utils.rs
src/browse/: channel.rs  channel_extended.rs  conditional.rs  mod.rs  subscriptions.rs  videos.rs  videos_continued.rs
src/creator/: channels.rs  mod.rs  search.rs
src/next/: mod.rs  watch_next.rs
