[package]
name = "youtubei"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper for YouTube's InnerTube API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ddd/youtubei"
homepage = "https://github.com/ddd/youtubei"
keywords = ["youtube", "api", "innertube", "wrapper", "rust"]
categories = ["api-bindings", "web-programming"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.9", features = ["full"] }
lazy_static = "1.5.0"
native-tls = "0.2.12"
once_cell = "1.20.2"
prost = "0.13.3"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["socks"] }
scylla = "0.14.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tracing = "0.1.41"
urlencoding = "2.1.3"

[build-dependencies]
prost-build = "0.13.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
